--- a/frontend/components/answerCheckin/answer.template.pug
+++ b/frontend/components/answerCheckin/answer.template.pug
@@ -1,6 +1,6 @@
 div.answer-checkin-wrapper
     label(for='answer-filter') select checkins: 
-    select#answer-filter(ng-model='answr.selectedAnswer', ng-options='item for item in answr.options',ng-selected='answr.options.0',ng-change='answr.filterAnswers()')
+    select#answer-filter(ng-model='answr.selectedAnswer', ng-options='item for item in answr.options',ng-selected='answr.options[0]',ng-change='answr.filterAnswers()')
     div(ng-repeat="checkin in answr.checkins track by $index") 
         p <b>{{checkin.question}}</b>
         div(ng-repeat="answer in checkin.answers track by $index")
