correct checkins button

--- a/frontend/components/checkins/checkinsStyles.styl
+++ b/frontend/components/checkins/checkinsStyles.styl
@@ -140,7 +140,7 @@
                 word-break break-all
 
         ul.main
-            margin-top -50px
+            //margin-top -50px
             text-align center //or justify
 
         .question
