--- a/frontend/components/checkins/checkinsCreateStyles.styl
+++ b/frontend/components/checkins/checkinsCreateStyles.styl
@@ -60,6 +60,11 @@
         button
             button()
             margin auto
+            font-family "Montserrat"
+            font-size 24px
+            padding 5px 30px
+            --box-shadow-color #004D40
+            background-color #2e8f35
 
     label
         &.checkbox
@@ -99,6 +104,11 @@
             font-size 20px
         button
             button()
+            font-family "Montserrat"
+            font-size 24px
+            padding 5px 30px
+            --box-shadow-color #004D40
+            background-color #2e8f35
             margin-left 25px
             margin-top 30px
 
