--- a/frontend/components/tasks/taskCreateEditTemplate.pug
+++ b/frontend/components/tasks/taskCreateEditTemplate.pug
@@ -2,7 +2,7 @@ user-list(user-data = 'taskCE.users', select-callback = 'taskCE.onUserSelect', p
 .task-wrapper.row.center-xs
 	.main-container.col-xs-8
 		.wrapper_lable.row
-			.col-xs-3
+			.col-xs-3.backbutton
 				a(href = "#/tasks" ng-link = "['TasksList']")
 					i.fa.fa-arrow-left.button 
 			.col-xs-6
