--- a/frontend/directives/fileUpload/fileUpload.styl
+++ b/frontend/directives/fileUpload/fileUpload.styl
@@ -3,11 +3,15 @@
 	width 100%
 	.addFile
 		transition padding,height 0.5s ease-out
-		button()
+		outline none
+		border none
+		border-radius 4px
+		border-bottom 4px solid border-color
 		overflow hidden
+		color text-input
 		margin 25px auto
 		font-size 1.2em
-		padding 0 0.5em
+		padding 0.5em 1em
 		outline none
 		position relative
 		display inline-block
