--- a/frontend/components/postMessage/postMessage.styl
+++ b/frontend/components/postMessage/postMessage.styl
@@ -23,6 +23,7 @@
             button()
             margin-top 3%
             width 30%
+
         hr
             width 80%
             height 1px
@@ -56,7 +57,7 @@
     .buttons
         display flex
         flex-direction row
-        justify-content space-between
+        justify-content center
         flex-wrap wrap
     .sendBtn
         display flex
@@ -73,3 +74,8 @@
             margin-top 20px
             padding-right 18px
             padding-left 18px
+            font-family "Montserrat"
+            font-size 24px
+            padding 5px 30px
+            --box-shadow-color #004D40
+            background-color #2e8f35
