--- a/frontend/components/postMessage/postMessage.styl
+++ b/frontend/components/postMessage/postMessage.styl
@@ -1,34 +1,32 @@
 @import "../../../public/libs/css/generalComponentsStyle.styl"
 .post-message-wrapper
     width 50%
-    border 1px solid #7986CB
+    //border 1px solid #7986CB
     border-radius 10px
     position absolute
     top 100px
     left 30%
     margin-bottom 50px
-    background-color background-white
+    background-color #DADFE1
     padding-right 5%
     padding-left 5%
-    header
-        margin-bottom 30px
+    .header-setup
         display flex
-        padding-right 10px
-        h2
-            margin-left 1%
-            padding 1%
-            font-size 1.4em
-            font-family "Montserrat"
-        div
-            button()
-            margin-top 3%
-            width 30%
-
+        justify-content center
+        margin-top 20px
+        .return-btn
+            i
+                margin 5px
         hr
             width 80%
             height 1px
             background-color #EF6C00
             margin-left 0
+
+    input
+        width 100%
+        font-size 25px
+
     .input-block
         margin-left 15%
         margin-bottom 50px
