--- a/frontend/components/editMessage/editMessage.pug
+++ b/frontend/components/editMessage/editMessage.pug
@@ -1,16 +1,20 @@
 section.post-message-wrapper
-  header
-    h2 Edit message
-    div.fa.fa-close(ng-link='["MsgBoard"]')
+  .header-setup
+    .return-btn
+      i.fa.fa-arrow-left
+      a(ng-link='["MsgBoard"]')
+        span Discard my changes
+
+      //div.fa.fa-close(ng-link='["MsgBoard"]')
       //img(ng-link='["MsgBoard"]', align='top', src='https://cdn3.iconfinder.com/data/icons/simple-files-1/128/No-128.png', alt='exit')
   hr
   form(name="message",novalidate)
-    h1 Title
+    //h3 Title
     input(name="title",type="text",ng-model="editCtrl.draft.title",required,ng-minlength="3" ng-maxlength="30")
     p(ng-show="message.title.$invalid" class="help-block") Title is required.
     p(ng-show="message.title.$error.minlength" class="help-block") Title is too short.
     p(ng-show="message.title.$error.maxlength" class="help-block") Title is too long
-    h1 Description
+    //h3 Description
     input(ckeditor,type="text",name="text" , cols='30', rows='10',ng-model="editCtrl.draft.description",required,ng-minlength="10" ng-maxlength="600")
     hr
     p(ng-show="message.text.$invalid" class="help-block") Description is required.
@@ -25,6 +29,6 @@ section.post-message-wrapper
     //    option(value='draft2') draft2
     //    option(value='draft3') draft3
     .sendButtons
-      div.postBtn(ng-click="editCtrl.edit(message.$valid)") Edit
-      div.postBtn(ng-if="editCtrl.draft.isDraft",ng-click="editCtrl.postDraft(message.$valid)") Post on message board
+      div.postBtn(ng-click="editCtrl.edit(message.$valid)") Save
+      //div.postBtn(ng-if="editCtrl.draft.isDraft",ng-click="editCtrl.postDraft(message.$valid)") Post on message board
       button.delete(ng-click="editCtrl.delete()",ng-if="editCtrl.draft.author === editCtrl.window._injectedData.userId") Delete
