Redesign edit report

--- a/frontend/components/reports/reportsStyle.styl
+++ b/frontend/components/reports/reportsStyle.styl
@@ -214,7 +214,7 @@
     .button
         button()
         display flex
-        padding 1%
+        padding 5px
         justify-content center
         align-items center
         --box-shadow-color #004D40
@@ -232,13 +232,12 @@
         background-color #cb4e4e
     .view-btn
         background-color #F5F5F5
-        //border: 1px solid text-input
         border: 1px solid text-input
         &::before
             color text-input
     .type-btn
         background-color disable-input
-        padding: 1%
+        padding: 5px
         color text-input !important
     .chapter-title
         font-family "Montserrat"
