--- a/frontend/components/reports/reportEdit.template.pug
+++ b/frontend/components/reports/reportEdit.template.pug
@@ -1,59 +1,65 @@
 .reports-wrapper
     .row.center-xs
-        .col-xs-12.col-md-10.reports-holder
+        .col-xs-12.col-md-12.reports-holder
             .row.reports-header
-                h3.col-xs-10 Report Generating
-                .col-xs-1.col-xs-offset-1.fa.fa-close.button.font-button(ng-link="['Reports']")
+                h2.col-xs-12 Report Generating
+                //.col-xs-1.col-xs-offset-1.fa.fa-close.button.font-button(ng-link="['Reports']")
             .row.generate-holder.center-xs
                 .col-xs-12
                     .row.center-xs
                         .col-xs-11
                             .row.generate-item-header.middle-xs
-                                .col-xs-2 Title:
-                                input(type='text' ng-model="reportEdit.title").col-xs-4
-                                .col-xs-2.center-xs Created:
+                                .col-xs-2.gen-title Title:
+                                .col-xs-2.col-xs-offset-4.center-xs Created:
                                 .col-xs-2 {{reportEdit.creationDate | date: 'dd/MM/y'}}
                                 span.col-xs-1.col-xs-offset-1.button.f-btn.fa.fa-star-o.center-xs(ng-class ="{'fa-star-o': !reportEdit.isSaved, 'fa-star': reportEdit.isSaved}" ng-click="reportEdit.manageReportSaving()")
+                                input(type='text' ng-model="reportEdit.title").col-xs-12
                             .row.generate-item-header.middle-xs
-                                .col-xs-2 Description:
-                                input(type='text' ng-model='reportEdit.description').col-xs-10
-                            .row.generate-item-header.middle-xs
-                                .col-xs-2 Type:
-                                .col-xs-9.generate-item-holder
-                                    .generate-item(ng-click='reportEdit.gui.manageItem($index, reportEdit.types, reportEdit.typeSamples, "type", reportEdit.checkin)' ng-repeat = 't in reportEdit.types track by $index') {{t}}
-                                        span &#xf068
-                                .col-xs-1.fa.button.f-btn(ng-class = '{"fa-angle-left": !reportEdit.gui.isTypePanel, "fa-angle-down": reportEdit.gui.isTypePanel}' ng-click='reportEdit.gui.manageTypePanel()')
+                                .col-xs-12.gen-title Description:
+                                input(type='text' ng-model='reportEdit.description' placeholder="You report description").col-xs-12
+                            .row.generate-item-header.middle-xs.between-xs
+                                .col-xs-2.gen-title Type:
+                                .col-xs-9.generate-item-holder.hidden-gen
+                                    .generate-item.button.btn.type-btn(ng-click='reportEdit.gui.manageItem($index, reportEdit.types, reportEdit.typeSamples, "type", reportEdit.checkin)' ng-repeat = 't in reportEdit.types track by $index') {{t}}
+                                        span &nbsp;&#xf068
+                                .col-xs-1.fa.button.f-btn.view-btn(ng-class = '{"fa-angle-left": !reportEdit.gui.isTypePanel, "fa-angle-down": reportEdit.gui.isTypePanel}' ng-click='reportEdit.gui.manageTypePanel()')
                             .row
                                 .col-xs-12.generate-item-holder(ng-show='reportEdit.gui.isTypePanel')
-                                    span.generate-item(ng-click='reportEdit.gui.manageItem($index, reportEdit.typeSamples, reportEdit.types, "type", reportEdit.checkin, true)' ng-repeat = 't in reportEdit.typeSamples track by $index') {{t}}
-                                        span &#xf067
-                            .row.generate-item-header.middle-xs(ng-show="reportEdit.checkin.isCheckinPick")
-                                .col-xs-2 Checkins:
-                                .col-xs-9.generate-item-holder
-                                .col-xs-1.fa.button.f-btn(ng-class = '{"fa-angle-left": !reportEdit.gui.isCheckinPanel, "fa-angle-down": reportEdit.gui.isCheckinPanel}' ng-click='reportEdit.gui.manageCheckinPanel()')
+                                    span.generate-item.button.btn.type-btn(ng-click='reportEdit.gui.manageItem($index, reportEdit.typeSamples, reportEdit.types, "type", reportEdit.checkin, true)' ng-repeat = 't in reportEdit.typeSamples track by $index') {{t}}
+                                        span &nbsp;&#xf067
+                            hr
+                            .row.generate-item-header.middle-xs.between-xs(ng-show="reportEdit.checkin.isCheckinPick")
+                                .col-xs-2.gen-title Checkins:
+                                .col-xs-9.generate-item-holder.hidden-gen
+                                .col-xs-1.fa.button.f-btn.view-btn(ng-class = '{"fa-angle-left": !reportEdit.gui.isCheckinPanel, "fa-angle-down": reportEdit.gui.isCheckinPanel}' ng-click='reportEdit.gui.manageCheckinPanel()')
                             .row(ng-show="reportEdit.checkin.isCheckinPick")
                                 .col-xs-12.generate-item-holder(ng-show='reportEdit.gui.isCheckinPanel')
-                                    span.generate-item.middle-xs( ng-repeat = 'c in reportEdit.checkin.questions track by $index' ng-click="reportEdit.gui.manageArrayItems(c._id, reportEdit.checkin.report)" ng-class="{'item-out-group': reportEdit.checkin.report.indexOf(c._id)!=-1, 'item-in-group': 'reportEdit.checkin.report.indexOf(c._id)==-1'}") {{c.question}}
+                                    span.generate-item.button.btn.type-btn( ng-repeat = 'c in reportEdit.checkin.questions track by $index' ng-click="reportEdit.gui.manageArrayItems(c._id, reportEdit.checkin.report)" ng-class="{'item-out-group': reportEdit.checkin.report.indexOf(c._id)!=-1, 'item-in-group': 'reportEdit.checkin.report.indexOf(c._id)==-1'}") {{c.question}}
                                         span {{reportEdit.checkin.report.indexOf(c._id)==-1?"&#xf067":"&#xf068"}}
-                            .row.generate-item-header.middle-xs
-                                .col-xs-2 User:
-                                .col-xs-9.generate-item-holder
-                                    span.generate-item(ng-click='reportEdit.gui.manageItem($index, reportEdit.users, reportEdit.userSamples, "user")' ng-repeat = 'u in reportEdit.users track by $index') {{u}}
-                                        span &#xf068
-                                .col-xs-1.fa.button.f-btn(ng-class = '{"fa-angle-left": !reportEdit.gui.isUserPanel, "fa-angle-down": reportEdit.gui.isUserPanel}' ng-click='reportEdit.gui.manageUserPanel()')
+                            hr(ng-show="reportEdit.checkin.isCheckinPick")
+                            .row.generate-item-header.middle-xs.between-xs
+                                .col-xs-2.gen-title User:
+                                .col-xs-9.generate-item-holder.hidden-gen
+                                    span.generate-item.button.btn.type-btn(ng-click='reportEdit.gui.manageItem($index, reportEdit.users, reportEdit.userSamples, "user")' ng-repeat = 'u in reportEdit.users track by $index') {{u}}
+                                        span &nbsp;&#xf068
+                                .col-xs-1.fa.button.f-btn.view-btn(ng-class = '{"fa-angle-left": !reportEdit.gui.isUserPanel, "fa-angle-down": reportEdit.gui.isUserPanel}' ng-click='reportEdit.gui.manageUserPanel()')
                             .row
                                 .col-xs-12.generate-item-holder(ng-show='reportEdit.gui.isUserPanel')
-                                    span.generate-item.middle-xs(ng-click='reportEdit.gui.manageItem($index, reportEdit.userSamples, reportEdit.users, "user")' ng-repeat = 'u in reportEdit.userSamples track by $index') {{u}}
-                                        span &#xf067
+                                    span.generate-item.button.btn.type-btn(ng-click='reportEdit.gui.manageItem($index, reportEdit.userSamples, reportEdit.users, "user")' ng-repeat = 'u in reportEdit.userSamples track by $index') {{u}}
+                                        span &nbsp;&#xf067
+                            hr
                             .row.generate-item-header.middle-xs
-                                .col-xs-2 Date:
+                                .col-xs-2.gen-title Date:
                                 .col-xs-2.center-xs From:
                                 input(type="date" ng-model='reportEdit.dateRange[0]').col-xs-3
                                 .col-xs-1.col-xs-1.center-xs To:
                                 input(type="date" ng-model='reportEdit.dateRange[1]').col-xs-3
-                    .row
-                        span.button.btn.col-xs-4.col-xs-offset-4(ng-click='reportEdit.reportGenerate()') Generate
+                            hr
+                    .row.center-xs
+                        span.button.btn.col-xs-5(ng-click='reportEdit.reportGenerate()') Generate
+                        span.button.btn.col-xs-2.col-xs-offset-1.delete-btn(ng-link="['Reports']") Back
                     .row.start-xs(ng-show='reportEdit.isGenerated')
+                        br
                         span.chapter-title.col-xs-10 History
                             .fa.fa-history
                         span.chapter-title.col-xs-1.end-xs Total:
