--- a/frontend/components/postMessage/postMessage.styl
+++ b/frontend/components/postMessage/postMessage.styl
@@ -1,15 +1,8 @@
 @import "../../../public/libs/css/generalComponentsStyle.styl"
-.post-message-wrapper
-    width 50%
-    border 1px solid #7986CB
-    border-radius 10px
-    position absolute
-    top 100px
-    left 30%
-    margin-bottom 50px
-    background-color background-white
-    padding-right 5%
-    padding-left 5%
+.post-messageWrapper
+    main-component()
+    .header
+        header-style()
     header
         margin-bottom 30px
         display flex
@@ -56,7 +49,7 @@
     .buttons
         display flex
         flex-direction row
-        justify-content space-between
+        justify-content center
         flex-wrap wrap
     .sendBtn
         display flex
@@ -67,9 +60,8 @@
             display flex
             justify-content center
             button()
-            padding-top 1%
-            padding-bottom 1%
-            margin-bottom 10px
-            margin-top 20px
-            padding-right 18px
-            padding-left 18px
+            font-family "Montserrat"
+            font-size 24px
+            padding 15px 50px
+            --box-shadow-color #004D40
+            background-color #2e8f35   
