--- a/frontend/components/events/eventCreate.component.styl
+++ b/frontend/components/events/eventCreate.component.styl
@@ -25,10 +25,12 @@
       
       .dataPicker
         .form-control
-          width 60%
+          width 100%
         .picker
           display flex
           flex-direction row
+          .time
+            width 30% 
         a
           height 34px
     textarea
