--- a/frontend/components/reports/reportEdit.template.pug
+++ b/frontend/components/reports/reportEdit.template.pug
@@ -10,8 +10,8 @@
                         .col-xs-11
                             .row.generate-item-header.middle-xs
                                 .col-xs-2.gen-title Title:
-                                .col-xs-2.col-xs-offset-4.center-xs Created:
-                                .col-xs-2 {{reportEdit.creationDate | date: 'dd/MM/y'}}
+                                .col-xs-2.col-xs-offset-4.center-xs.gen-title Created:
+                                .col-xs-2.gen-title {{reportEdit.creationDate | date: 'dd/MM/y'}}
                                 span.col-xs-1.col-xs-offset-1.button.f-btn.fa.fa-star-o.center-xs(ng-class ="{'fa-star-o': !reportEdit.isSaved, 'fa-star': reportEdit.isSaved}" ng-click="reportEdit.manageReportSaving()")
                                 input(type='text' ng-model="reportEdit.title").col-xs-12
                             .row.generate-item-header.middle-xs
@@ -19,18 +19,18 @@
                                 input(type='text' ng-model='reportEdit.description' placeholder="You report description").col-xs-12
                             .row.generate-item-header.middle-xs.between-xs
                                 .col-xs-2.gen-title Type:
-                                .col-xs-9.generate-item-holder.hidden-gen
+                                .col-xs-9.generate-item-holder.hidden-gen {{reportEdit.types.length==0?"Click on type(s) to add":""}}
                                     .generate-item.button.btn.type-btn(ng-click='reportEdit.gui.manageItem($index, reportEdit.types, reportEdit.typeSamples, "type", reportEdit.checkin)' ng-repeat = 't in reportEdit.types track by $index') {{t}}
                                         span &nbsp;&#xf068
                                 .col-xs-1.fa.button.f-btn.view-btn(ng-class = '{"fa-angle-left": !reportEdit.gui.isTypePanel, "fa-angle-down": reportEdit.gui.isTypePanel}' ng-click='reportEdit.gui.manageTypePanel()')
                             .row
-                                .col-xs-12.generate-item-holder(ng-show='reportEdit.gui.isTypePanel')
+                                .col-md-8.col-md-offset-2.col-xs-12.col-lg-6.col-lg-offset-3.generate-item-holder(ng-show='reportEdit.gui.isTypePanel')
                                     span.generate-item.button.btn.type-btn(ng-click='reportEdit.gui.manageItem($index, reportEdit.typeSamples, reportEdit.types, "type", reportEdit.checkin, true)' ng-repeat = 't in reportEdit.typeSamples track by $index') {{t}}
                                         span &nbsp;&#xf067
                             hr
                             .row.generate-item-header.middle-xs.between-xs(ng-show="reportEdit.checkin.isCheckinPick")
                                 .col-xs-2.gen-title Checkins:
-                                .col-xs-9.generate-item-holder.hidden-gen
+                                .col-xs-9.generate-item-holder.hidden-gen {{reportEdit.checkin.report.length==0?"Click on question(s) to add":""}}
                                 .col-xs-1.fa.button.f-btn.view-btn(ng-class = '{"fa-angle-left": !reportEdit.gui.isCheckinPanel, "fa-angle-down": reportEdit.gui.isCheckinPanel}' ng-click='reportEdit.gui.manageCheckinPanel()')
                             .row(ng-show="reportEdit.checkin.isCheckinPick")
                                 .col-xs-12.generate-item-holder(ng-show='reportEdit.gui.isCheckinPanel')
@@ -39,12 +39,12 @@
                             hr(ng-show="reportEdit.checkin.isCheckinPick")
                             .row.generate-item-header.middle-xs.between-xs
                                 .col-xs-2.gen-title User:
-                                .col-xs-9.generate-item-holder.hidden-gen
+                                .col-xs-9.generate-item-holder.hidden-gen {{reportEdit.users.length==0?"Click on user(s) to add":""}}
                                     span.generate-item.button.btn.type-btn(ng-click='reportEdit.gui.manageItem($index, reportEdit.users, reportEdit.userSamples, "user")' ng-repeat = 'u in reportEdit.users track by $index') {{u}}
                                         span &nbsp;&#xf068
                                 .col-xs-1.fa.button.f-btn.view-btn(ng-class = '{"fa-angle-left": !reportEdit.gui.isUserPanel, "fa-angle-down": reportEdit.gui.isUserPanel}' ng-click='reportEdit.gui.manageUserPanel()')
                             .row
-                                .col-xs-12.generate-item-holder(ng-show='reportEdit.gui.isUserPanel')
+                                .col-md-8.col-md-offset-2.col-xs-12.col-lg-6.col-lg-offset-3.generate-item-holder(ng-show='reportEdit.gui.isUserPanel')
                                     span.generate-item.button.btn.type-btn(ng-click='reportEdit.gui.manageItem($index, reportEdit.userSamples, reportEdit.users, "user")' ng-repeat = 'u in reportEdit.userSamples track by $index') {{u}}
                                         span &nbsp;&#xf067
                             hr
