--- a/frontend/components/reports/reportsStyle.styl
+++ b/frontend/components/reports/reportsStyle.styl
@@ -96,6 +96,7 @@
     .generate-holder
         width: 80%
         margin-left: 10%
+        color disable-input
         .generate-item-header
             font-size 20px
             font-family "Montserrat"
@@ -105,6 +106,7 @@
             .gen-title
                 font-weight: bold
                 font-size: 23px
+                color: text-input
             input
                 border-radius 4px
                 border none
