--- a/frontend/components/reports/reportsStyle.styl
+++ b/frontend/components/reports/reportsStyle.styl
@@ -187,6 +187,7 @@
         margin-bottom  2%
         border-radius 10px
         border-bottom 4px solid border-color
+        color text-input
         //box-shadow 0px 2px 3px 2px  border-grey
         padding 1%
         //border 2px solid main-blue
