--- a/frontend/components/answerCheckin/answer.template.pug
+++ b/frontend/components/answerCheckin/answer.template.pug
@@ -1,9 +1,15 @@
 div.answer-checkin-wrapper
-    //- label(for='answer-filter') select checkins: 
-    //- select#answer-filter(ng-model='answr.selectedAnswer', ng-options='item for item in answr.options',ng-selected='answr.options[0]',ng-change='answr.filterAnswers()')
-    label(for='answer-filter') Answer checkins: 
-    //- select#answer-filter(ng-model='answr.selectedAnswer', ng-options='item for item in answr.options',ng-selected='answr.options[0]',ng-change='answr.filterAnswers()')
-    div(ng-repeat="checkin in answr.checkins track by $index") 
+    label(for='answer-filter') Select checkins: 
+    select#answer-filter(ng-model='answr.selectedAnswer', ng-options='item for item in answr.options', ng-selected='answr.options[0]',ng-change='answr.filterAnswers()')
+    div(ng-if="answr.selectedAnswer=='all'", ng-repeat="checkin in answr.checkins track by $index") 
         p <b>{{checkin.question}}</b>
         div(ng-repeat="answer in checkin.answers track by $index")
             p {{answer.creationDate | date: "y/MM/dd HH:mm" }} <button ng-if="answer.answer == 'noAnswer'", ng-click="answr.goToAnswer(checkin._id, answer.token)">answer question</button><button ng-if="answer.answer != 'noAnswer'", ng-click="answr.goToAnswer(checkin._id, answer.token)">edit question</button> 
+    div(ng-if="answr.selectedAnswer=='unanswered'", ng-repeat="checkin in answr.checkins track by $index") 
+        p <b>{{checkin.question}}</b>
+        div(ng-repeat="answer in checkin.answers | filter:{answer: 'noAnswer'} track by $index")
+            p {{answer.creationDate | date: "y/MM/dd HH:mm" }} <button ng-if="answer.answer == 'noAnswer'", ng-click="answr.goToAnswer(checkin._id, answer.token)">answer question</button><button ng-if="answer.answer != 'noAnswer'", ng-click="answr.goToAnswer(checkin._id, answer.token)">edit question</button> 
+    div(ng-if="answr.selectedAnswer=='answered'", ng-repeat="checkin in answr.checkins track by $index") 
+        p <b>{{checkin.question}}</b>
+        div(ng-repeat="answer in checkin.answers | filter:{answer: '!noAnswer'} track by $index")
+            p {{answer.creationDate | date: "y/MM/dd HH:mm" }} <button ng-if="answer.answer == 'noAnswer'", ng-click="answr.goToAnswer(checkin._id, answer.token)">answer question</button><button ng-if="answer.answer != 'noAnswer'", ng-click="answr.goToAnswer(checkin._id, answer.token)">edit question</button>
