--- a/frontend/components/reports/reportsStyle.styl
+++ b/frontend/components/reports/reportsStyle.styl
@@ -107,6 +107,22 @@
                 font-weight: bold
                 font-size: 23px
                 color: text-input
+            .date-holder
+                border-bottom 4px solid border-color
+                background-color disable-input
+                input
+                    background-color: none
+                    border-bottom: none
+                    border-radius: 5px
+                    color: text-input
+                    font-size: 10px
+                i
+                    color: text-input
+                .uib-datepicker-popup
+                    padding: 5px
+                    button
+                        span
+                            font-size: 15px
             input
                 border-radius 4px
                 border none
