--- a/frontend/components/menu/menu-pug.component.pug
+++ b/frontend/components/menu/menu-pug.component.pug
@@ -4,40 +4,40 @@ aside.side-menu-wrapper
 			i.fa.fa-bars
 	nav#side-menu.side-menu(ng-disabled="MenuCtrl.disabled")
 		ul
-			li
-				a(ng-link='["MainPage"]',ng-if="MenuCtrl.disabled ", ng-click="MenuCtrl.showMenu()")
+			li#main-page
+				a(ng-link='["MainPage"]',ng-if="MenuCtrl.disabled ", ng-click="MenuCtrl.showMenu(); MenuCtrl.selectMenuItem('/main-page')")
 					i.fa.fa-home.fa-2x
 					span.nav-text Home
-			li
-				a(ng-link='["MsgBoard"]',ng-if="MenuCtrl.disabled",  ng-click="MenuCtrl.showMenu()")
+			li#messageboard
+				a(ng-link='["MsgBoard"]',ng-if="MenuCtrl.disabled",  ng-click="MenuCtrl.showMenu(); MenuCtrl.selectMenuItem('/messageboard')")
 					i.fa.fa-television.fa-2x
 					span.nav-text Message Board
-			li(ng-if="MenuCtrl.checkinsAccess")
-				a(ng-link='["Checkins"]',ng-if="MenuCtrl.disabled",  ng-click="MenuCtrl.showMenu()")
+			li#checkins(ng-if="MenuCtrl.checkinsAccess")
+				a(ng-link='["Checkins"]',ng-if="MenuCtrl.disabled",  ng-click="MenuCtrl.showMenu(); MenuCtrl.selectMenuItem('/checkins')")
 					i.fa.fa-calendar-check-o.fa-2x
 					span.nav-text Check-ins
-			li
-				a(ng-if="MenuCtrl.disabled", ng-link='["AnswerCheckin"]', ng-click="MenuCtrl.showMenu()")
+			li#answerCheckin
+				a(ng-if="MenuCtrl.disabled", ng-link='["AnswerCheckin"]', ng-click="MenuCtrl.showMenu(); MenuCtrl.selectMenuItem('/answerCheckin')")
 					i.fa.fa-pencil-square-o.fa-2x
 					span.nav-text Answer Checkin
-			li
-				a(ng-if="MenuCtrl.disabled", ng-link='["Tasks"]', ng-click="MenuCtrl.showMenu()")
+			li#tasks
+				a(ng-if="MenuCtrl.disabled", ng-link='["Tasks"]', ng-click="MenuCtrl.showMenu(); MenuCtrl.selectMenuItem('/tasks')")
 					i.fa.fa-tasks.fa-2x
 					span.nav-text Tasks
-			li
-				a(ng-link='["Events"]',ng-if="MenuCtrl.disabled",  ng-click="MenuCtrl.showMenu()")
+			li#events
+				a(ng-link='["Events"]',ng-if="MenuCtrl.disabled",  ng-click="MenuCtrl.showMenu(); MenuCtrl.selectMenuItem('/events')")
 					i.fa.fa-calendar.fa-2x
 					span.nav-text Events
-			li(ng-if="MenuCtrl.reportsAccess")
-				a(ng-link='["Reports"]',ng-if="MenuCtrl.disabled",  ng-click="MenuCtrl.showMenu()")
+			li#reports(ng-if="MenuCtrl.reportsAccess")
+				a(ng-link='["Reports"]', ng-if="MenuCtrl.disabled",  ng-click="MenuCtrl.showMenu(); MenuCtrl.selectMenuItem('/reports')")
 					i.fa.fa-area-chart.fa-2x
 					span.nav-text Reports
 			//- li
 			//- 	a(ng-link='["Drafts"]', ng-if="MenuCtrl.disabled",  ng-click="MenuCtrl.showMenu()")
 			//- 		i.fa.fa-pencil-square-o.fa-2x
 			//- 		span.nav-text Drafts
-			li.lastItem
-				a(ng-link='["Project"]',ng-if="MenuCtrl.disabled",  ng-click="MenuCtrl.showMenu()")
+			li#settings.lastItem
+				a(ng-link='["Project"]',ng-if="MenuCtrl.disabled",  ng-click="MenuCtrl.showMenu(); MenuCtrl.selectMenuItem('/settings')")
 					i.fa.fa-cogs.fa-2x
 					span.nav-text Settings
 			li
