--- a/frontend/components/menu/menuStyles.styl
+++ b/frontend/components/menu/menuStyles.styl
@@ -7,6 +7,9 @@
     z-index 10
     *
         box-sizing border-box
+    .selected-menu-item
+        a
+            background-color #37474F
     .burger
         color black
         display none
@@ -133,6 +136,8 @@
     .side-menu li:hover > a, nav.side-menu li.active > a, .dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus, .dropdown-menu > .active > a, .dropdown-menu > .active > a:hover, .dropdown-menu > .active > a:focus, .no-touch .dashboard-page nav.dashboard-menu ul li:hover a, .dashboard-page nav.dashboard-menu ul li.active a
         color: #fff;
         background-color: #5fa2db;
+
+
 
 @media only screen  and (max-width : 1000px), screen and (max-device-width : 1000px)
     .side-menu-wrapper
